<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="abhishek.billcalc.app.MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount_textview"
        android:id="@+id/amountTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/amountEditText"
        android:hint="@string/amount_edittext"
        android:layout_alignTop="@+id/amountTextView"
        android:layout_toRightOf="@+id/totalAmountTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_textview"
        android:id="@+id/tipTextView"
        android:layout_below="@+id/amountEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/tipEditText"
        android:text="@string/tip_edittext"
        android:hint="@string/tip_edittext"
        android:layout_alignTop="@+id/tipTextView"
        android:layout_alignLeft="@+id/totalAmountEditText"
        android:layout_alignStart="@+id/totalAmountEditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_amount_textview"
        android:id="@+id/totalAmountTextView"
        android:layout_below="@+id/tipEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/totalAmountEditText"
        android:layout_alignTop="@+id/totalAmountTextView"
        android:layout_toRightOf="@+id/totalAmountTextView"
        android:hint="@string/total_amount_edittext" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_textview"
        android:id="@+id/resetBtn"
        android:onClick="ResetFields"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/totalAmountTextView" />

</RelativeLayout>
